--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
